--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "react-sortablejs": "^1.5.1"
+    "react-sortablejs": "^1.5.1",
+    "sweetalert2-react": "^0.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
