--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "react-sortablejs": "^1.5.1",
+    "serialize-javascript": "^2.1.2",
     "sweetalert2-react": "^0.8.3"
   },
   "scripts": {
